// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<li
  key="branch-master"
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "branch": undefined,
          "id": "component",
        },
      }
    }
  >
    <div
      className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      title="master"
    >
      <BranchIcon
        branchLike={
          Object {
            "isMain": true,
            "name": "master",
          }
        }
        className="little-spacer-right"
      />
      master
      <div
        className="outline-badge spacer-left"
      >
        branches.main_branch
      </div>
    </div>
    <div
      className="big-spacer-left note"
    >
      <Connect(BranchStatus)
        branchLike={
          Object {
            "isMain": true,
            "name": "master",
          }
        }
        component="component"
      />
    </div>
  </Link>
</li>
`;

exports[`renders short-living branch 1`] = `
<li
  key="branch-foo"
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "branch": "foo",
          "id": "component",
        },
      }
    }
  >
    <div
      className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      title="foo"
    >
      <BranchIcon
        branchLike={
          Object {
            "isMain": false,
            "mergeBranch": "master",
            "name": "foo",
            "status": Object {
              "qualityGateStatus": "ERROR",
            },
            "type": "SHORT",
          }
        }
        className="little-spacer-right big-spacer-left"
      />
      foo
    </div>
    <div
      className="big-spacer-left note"
    >
      <Connect(BranchStatus)
        branchLike={
          Object {
            "isMain": false,
            "mergeBranch": "master",
            "name": "foo",
            "status": Object {
              "qualityGateStatus": "ERROR",
            },
            "type": "SHORT",
          }
        }
        component="component"
      />
    </div>
  </Link>
</li>
`;

exports[`renders short-living orhpan branch 1`] = `
<li
  key="branch-foo"
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "branch": "foo",
          "id": "component",
        },
      }
    }
  >
    <div
      className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      title="foo"
    >
      <BranchIcon
        branchLike={
          Object {
            "isMain": false,
            "isOrphan": true,
            "mergeBranch": "master",
            "name": "foo",
            "status": Object {
              "qualityGateStatus": "ERROR",
            },
            "type": "SHORT",
          }
        }
        className="little-spacer-right"
      />
      foo
    </div>
    <div
      className="big-spacer-left note"
    >
      <Connect(BranchStatus)
        branchLike={
          Object {
            "isMain": false,
            "isOrphan": true,
            "mergeBranch": "master",
            "name": "foo",
            "status": Object {
              "qualityGateStatus": "ERROR",
            },
            "type": "SHORT",
          }
        }
        component="component"
      />
    </div>
  </Link>
</li>
`;
